--- a/PatientPortal/Site.Master
+++ b/PatientPortal/Site.Master
@@ -107,7 +107,7 @@
                         <li>
                             <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="fas fa-dollar-sign"></i><span class="hide-menu">Billing</span></a>
                             <ul aria-expanded="false" class="collapse">
-                                <li><a href="/">Insurance</a></li>
+                                <li><a href="MyInsurance.aspx">Insurance</a></li>
                             </ul>
                         </li>
                         <li>
