Label and Text Changes

--- a/PatientPortal/Site.Master
+++ b/PatientPortal/Site.Master
@@ -74,7 +74,7 @@
                                             <a href="javascript:void(0)">
                                                 <div class="btn btn-danger btn-circle"><i class="fa fa-link"></i></div>
                                                 <div class="mail-contnet">
-                                                    <h5>Luanch Admin</h5> <span class="mail-desc">Just see the my new admin!</span> <span class="time">9:30 AM</span>
+                                                    <h5>Launch Admin</h5> <span class="mail-desc">Just see the my new admin!</span> <span class="time">9:30 AM</span>
                                                 </div>
                                             </a>
                                             <!-- Message -->
@@ -95,7 +95,7 @@
                                             <a href="javascript:void(0)">
                                                 <div class="btn btn-primary btn-circle"><i class="ti-user"></i></div>
                                                 <div class="mail-contnet">
-                                                    <h5>Pavan kumar</h5> <span class="mail-desc">Just see the my admin!</span> <span class="time">9:02 AM</span>
+                                                    <h5>Tony Stark</h5> <span class="mail-desc">Are we still on for the meeting?</span> <span class="time">9:02 AM</span>
                                                 </div>
                                             </a>
                                         </div>
