--- a/PatientPortal/Site.Master
+++ b/PatientPortal/Site.Master
@@ -224,12 +224,12 @@
                                      <form>
                                         <div class="form-body">
                                             <div class="form-group row m-b-5">
-                                                <label for="recipient-name" class="control-label">Please note that you can expect to receive a response within 24 hours.</label>
+                                                <label for="recipient-name" class="control-label p-l-10">Please note that you can expect to receive a response within 24 hours.</label>
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group row">
-                                                        <label class="col-md-2">On behalf of:</label>
+                                                        <label class="col-md-3" style="text-align:right">On behalf of:</label>
                                                         <div class="col-md-6">
                                                             <select class="custom-select col-12" id="inlineFormCustomSelect">
                                                                 <option selected="">Choose...</option>
@@ -244,7 +244,7 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group row">
-                                                        <label class="col-md-2">Practice:</label>
+                                                        <label class="col-md-3" style="text-align:right">Practice:</label>
                                                         <div class="col-md-6">
                                                             <select class="custom-select col-12" id="inlineFormCustomSelect1">
                                                                 <option selected="">Choose...</option>
@@ -259,7 +259,7 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group row">
-                                                        <label class="col-md-2">Location:</label>
+                                                        <label class="col-md-3" style="text-align:right">Location:</label>
                                                         <div class="col-md-6">
                                                             <select class="custom-select col-12" id="inlineFormCustomSelect2">
                                                                 <option selected="">Choose...</option>
@@ -274,7 +274,7 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group row">
-                                                        <label class="col-md-2">To:</label>
+                                                        <label class="col-md-3" style="text-align:right">To:</label>
                                                         <div class="col-md-6">
                                                             <select class="custom-select col-12" id="inlineFormCustomSelect3">
                                                                 <option selected="">Choose...</option>
@@ -289,19 +289,29 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group row">
-                                                        <label class="col-md-2">Subject:</label>
-                                                        <div class="col-md-10">
+                                                        <label class="col-md-3" style="text-align:right">Subject:</label>
+                                                        <div class="col-md-9">
                                                             <input type="text" class="form-control" runat="server" />
                                                         </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <div class="form-group row">
+                                                        <label class="col-md-3" style="text-align:right"><i class="fas fa-link"></i></label>
+                                                        <%--<div class="col-md-9">
+                                                            <input type="text" class="form-control" runat="server" />
+                                                        </div>--%>
                                                     </div>
                                                 </div>
                                             </div>
                                              <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group row">
-                                                        <label class="col-md-2">Message:</label>
-                                                        <div class="col-md-10">
-                                                            <textarea id="mymce" name="area" rows="5" cols="10" class="form-control"></textarea>
+                                                        <%--<label class="col-md-2">Message:</label>--%>
+                                                        <div class="col-md-12">
+                                                            <textarea id="mymce" name="area" rows="8" cols="10" class="form-control" placeholder="Please enter your message here"></textarea>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -357,7 +367,6 @@
                 finish: "YES, SCHEDULE THIS APPOINTMENT"
             },
             onFinished: function (event, currentIndex) {
-                debugger;
                 Swal.fire("Live Appointment Success!", "Your Appointment has successfully been scheduled for Friday, July 31 2020 10:30 AM with REED FOWLER at Patient Portal - Main Office.");
                 setTimeout(function () { window.location = "MyAppointments.aspx"; }, 4000);
 
@@ -373,7 +382,6 @@
                 finish: "SUBMIT"
             },
             onFinished: function (event, currentIndex) {
-                debugger;
                 //Swal.fire("Live Appointment Success!", "Your Appointment has successfully been scheduled for Friday, July 31 2020 10:30 AM with REED FOWLER at Patient Portal - Main Office.");
                 setTimeout(function () { window.location = "Dashboard.aspx"; }, 1000);
 
@@ -391,14 +399,12 @@
         });
 
         $('#mychartmenu a').click(function (e) {
-            debugger;
             $(this).tab('show');
             //window.location.reload();
         });
 
         // store the currently selected tab in the hash value
         $("ul.test > li > a").on("shown.bs.tab", function (e) {
-            debugger;
             var id = $(e.target).attr("href");
             window.location.hash = id;
             window.location.href = id;
@@ -406,7 +412,6 @@
         });
 
         $(document).ready(function () {
-            debugger;
             // on load of the page: switch to the currently selected tab
             var hash = window.location.hash;
             $('#myTab a[href="' + hash + '"]').tab('show');
