--- a/PatientPortal/Content/css/pages-login-register-lock.css
+++ b/PatientPortal/Content/css/pages-login-register-lock.css
@@ -32,8 +32,19 @@ Login register and recover password Page
   background-position: center center;
   height: 100%;
   width: 100%;
-  padding: 6% 0;
-  position: fixed; }
+  padding: 3% 0;
+  position: relative; }
+
+.login-register-bottom {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100%;
+    width: 100%;
+    padding: 0% 0;
+    position: relative;
+    padding-bottom:1%;
+}
 
 .login-box {
   width: 800px;
